--- a/RF_Go/Components/MainTab.razor
+++ b/RF_Go/Components/MainTab.razor
@@ -9,7 +9,6 @@
 @inject MudBlazor.ISnackbar Snackbar
 @inject IJSRuntime JSRuntime
 @inject NavigationManager NavigationManager
-
         @if (DevicesViewModel.Devices.Count == 0)
         {
             <MudContainer MaxWidth="MaxWidth.Medium" Style="display: flex; justify-content: center; align-items: center;">
@@ -25,79 +24,68 @@
         }
         else
         {
-    <div class="d-flex pl-6 pr-6 w-100 align-center justify-space-between pt-2">
-            <MudFab Color="Color.Primary" StartIcon="@Icons.Material.Filled.Add" OnClick="@(() => OpenDialogAsync())">Open</MudFab>
-            <div>
-                <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="mx-2" @onclick="RFCalcul">
-                    Calculate
-                </MudButton>
-                <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="mx-2" @onclick="RFCalcul">
-                    Sync
-                </MudButton>
-        </div>
-    </div>
-    
-    <MudTable Height="70vh" Hover="true" Dense="true" Bordered="false" Striped="false" HorizontalScrollbar="true" @bind-Items="DevicesViewModel.Devices" @ref="mudTable"
-              RowClass="cursor-pointer" RowClassFunc="@SelectedRowClassFunc">
-        <ToolBarContent>
-            <MudSpacer />
-            <MudTextField @bind-Value="searchString1" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
-        </ToolBarContent>
-        <HeaderContent>
-            <MudTh Style="min-width: 200px;">Device</MudTh>
-            <MudTh Style="min-width: 150px;">Set Frequencies</MudTh>
-            <MudTh Class="d-flex align-center justify-space-between" Style="min-width: 150px;">
-                    <span>Group</span>
-                <MudIconButton Icon="@Icons.Material.Filled.Delete" @onclick="DeleteAll" />
-            </MudTh>
-
-        </HeaderContent>
-
-        <RowTemplate>
-                <MudTd>
-@*                  <div class="d-flex flex-column">
-                     <MudTextField Typo="Typo.caption" Style="padding:0;" Label="@GetBrandAndModel(context)" @bind-Value="@context.Name"
-                                   @onblur="() => SaveDeviceAsync(context)" HelperText="@GetFrequency(context)" />
-                     <MudTextField Typo="Typo.caption" Style="margin:0;" @bind-Value="@context.IpAddress" HelperText="Ip Address" Placeholder="IP Address" @onblur="() => SaveDeviceAsync(context)" Class="custom-textfield" />
-                 </div> *@
-                    <MudTable @bind-Items="@context.Channels" Hover="true">
-                        <RowTemplate Context="chan">
-                            <MudTd Class="d-flex align-center mt-0">
-                            <MudTextField Typo="Typo.caption" Label="@GetBrandAndModel(context)" @bind-Value="@chan.ChannelName" Class="mt-0" Margin="Margin.Dense" Variant="Variant.Outlined"
-                                              @onblur="() => SaveDeviceAsync(context)" />
-                            </MudTd>
-                        </RowTemplate>
-                    </MudTable>
-                </MudTd>
-                <MudTd>
-                <MudTable @bind-Items="@context.Channels" Hover="true" Style="width:190px;">
-                        <RowTemplate Context="chan" >
-                            @*  <MudTd>@string.Format("{0:#,0}", chan.Frequency) </MudTd> *@
-
-                            <MudTd Class="d-flex align-center mt-0">
-                                <MudNumericField @bind-Value="chan.Frequency" Min="@chan.Range[0]" Max="@chan.Range[1]" Step="@chan.Step" Style="@CalculateStyle(chan)" Class="mt-0" Label="@GetRange(chan)" Variant="Variant.Outlined" Margin="Margin.Dense" />
-                                <MudCheckBox @bind-Value="chan.IsLocked" Dense="true" Color="Color.Secondary" CheckedIcon="@Icons.Material.Filled.Lock" UncheckedIcon="@Icons.Material.Filled.LockOpen" Class="pl-3"></MudCheckBox>
-                            </MudTd>
-                        </RowTemplate>
-                    </MudTable>
-                </MudTd>
-                <MudTd>
-                    <div class="d-flex justify-content-between">
-                        <MudSelect T="int" Value="context.GroupID" ValueChanged="(newGroupId) => GroupsViewModel.UpdateDeviceGroupAsync(context, newGroupId)">
-                            @foreach (var group in GroupsViewModel.Groups)
-                            {
-                                <MudSelectItem Value="@group.ID">@group.Name</MudSelectItem>
-                            }
-                        </MudSelect>
-                        <MudIconButton Icon="@Icons.Material.Filled.Delete" @onclick="() => DeleteDevice(context)" aria-label="delete" />
+            <div class="d-flex pl-6 pr-6 w-100 align-center justify-space-between pt-2">
+                    <MudFab Color="Color.Primary" StartIcon="@Icons.Material.Filled.Add" OnClick="@(() => OpenDialogAsync())">Open</MudFab>
+                    <div>
+                        <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="mx-2" @onclick="RFCalcul">
+                            Calculate
+                        </MudButton>
+                        <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="mx-2" @onclick="RFCalcul">
+                            Sync
+                        </MudButton>
                 </div>
-                <MudTextField Typo="Typo.caption" Style="margin:0;" @bind-Value="@context.IpAddress" Placeholder="IP Address" @onblur="() => SaveDeviceAsync(context)" Class="custom-textfield" />
-            </MudTd>
-            </RowTemplate>
-            <PagerContent>
-                <MudTablePager />
-            </PagerContent>
-        </MudTable>
+            </div>
+    
+            <MudTable Hover="true" Dense="true" Bordered="false" Striped="false" HorizontalScrollbar="true" @bind-Items="DevicesViewModel.Devices" @ref="mudTable"
+              RowClass="cursor-pointer" RowClassFunc="@SelectedRowClassFunc" Style="margin: auto; overflow: auto; max-height: calc(100vh - 150px);">
+                <HeaderContent>
+                    <MudTh Style="min-width: 200px;">Device</MudTh>
+                    <MudTh Style="min-width: 150px;">Set Frequencies</MudTh>
+                    <MudTh Class="d-flex align-center justify-space-between" Style="min-width: 150px;">
+                            <span>Group</span>
+                        <MudIconButton Icon="@Icons.Material.Filled.Delete" @onclick="DeleteAll" />
+                    </MudTh>
+
+                </HeaderContent>
+
+                <RowTemplate>
+                        <MudTd>
+                            <MudTable @bind-Items="@context.Channels" Hover="true" Style="min-width:70px;">
+                                <RowTemplate Context="chan">
+                                    <MudTd Class="d-flex align-center mt-0">
+                                    <MudTextField Typo="Typo.caption" Label="@GetBrandAndModel(context)" @bind-Value="@chan.ChannelName" Class="mt-0" Margin="Margin.Dense" Variant="Variant.Outlined"
+                                                      @onblur="() => SaveDeviceAsync(context)" />
+                                    </MudTd>
+                                </RowTemplate>
+                            </MudTable>
+                        </MudTd>
+                        <MudTd>
+                            <MudTable @bind-Items="@context.Channels" Hover="true" Style="min-width:70px;">
+                                <RowTemplate Context="chan" >
+                                    <MudTd Class="d-flex align-center mt-0">
+                                        <MudNumericField @bind-Value="chan.Frequency" Min="@chan.Range[0]" Max="@chan.Range[1]" Step="@chan.Step" Style="@CalculateStyle(chan)" Class="mt-0" Label="@GetRange(chan)" Variant="Variant.Outlined" Margin="Margin.Dense" />
+                                        <MudCheckBox @bind-Value="chan.IsLocked" Dense="true" Color="Color.Secondary" CheckedIcon="@Icons.Material.Filled.Lock" UncheckedIcon="@Icons.Material.Filled.LockOpen" Class="pl-3"></MudCheckBox>
+                                    </MudTd>
+                                </RowTemplate>
+                            </MudTable>
+                        </MudTd>
+                        <MudTd>
+                            <div class="d-flex justify-content-between">
+                                <MudSelect T="int" Value="context.GroupID" ValueChanged="(newGroupId) => GroupsViewModel.UpdateDeviceGroupAsync(context, newGroupId)">
+                                    @foreach (var group in GroupsViewModel.Groups)
+                                    {
+                                        <MudSelectItem Value="@group.ID">@group.Name</MudSelectItem>
+                                    }
+                                </MudSelect>
+                                <MudIconButton Icon="@Icons.Material.Filled.Delete" @onclick="() => DeleteDevice(context)" aria-label="delete" />
+                        </div>
+                        <MudTextField Typo="Typo.caption" Style="margin:0;" @bind-Value="@context.IpAddress" Placeholder="IP Address" @onblur="() => SaveDeviceAsync(context)" Class="custom-textfield" />
+                    </MudTd>
+                    </RowTemplate>
+                    <PagerContent>
+                        <MudTablePager />
+                    </PagerContent>
+                </MudTable>
         }
 
     @code 
@@ -164,12 +152,15 @@
         await DevicesViewModel.DeleteDeviceAsync(device.ID);
         Snackbar.Add("Device deleted", Severity.Success);
     }
-    private List<(int StartFrequency, int EndFrequency)> GetExcludedRanges()
+    private List<(float StartFrequency, float EndFrequency)> GetExcludedRanges()
     {
-        return ExclusionChannelViewModel.ExclusionChannels
+        var excludedChannels = ExclusionChannelViewModel.ExclusionChannels
             .Where(channel => channel.Exclude)
-            .Select(channel => (int.Parse(channel.StartFrequency), int.Parse(channel.EndFrequency)))
+            .Concat(ExclusionChannelViewModel.UserAddedChannels.Where(channel => channel.Exclude))
+            .Select(channel => (channel.StartFrequency, channel.EndFrequency))
             .ToList();
+
+        return excludedChannels;
     }
     private async Task RFCalcul()
     {
@@ -275,7 +266,6 @@
     private async Task DeleteAll()
     {
         await DevicesViewModel.DeleteAllDeviceAsync();
-        // forcing the refresh of the UI 
         await OnDeviceSaved.InvokeAsync();
     }
     private string GetRange(RFChannel chan)
