--- a/RF_Go/Shared/MainLayout.razor
+++ b/RF_Go/Shared/MainLayout.razor
@@ -1,7 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
-<MudThemeProvider Theme="_customDarkTheme"/>
+<MudThemeProvider Theme="_customDarkTheme" IsDarkMode="true"/>
     <MudDialogProvider />
+    <MudPopoverProvider />
     <MudSnackbarProvider />
 
     <div class="page">
@@ -13,17 +14,17 @@
     </div>
 
 @code {
-    private MudTheme _customDarkTheme = new MudTheme()
+    MudTheme _customDarkTheme = new MudTheme()
+    {
+        PaletteDark = new PaletteDark()
         {
-            Palette = new PaletteDark()
-            {
-                Background = "#1a1a27",  // Your custom dark background
-                Surface = "#2a2a3a",     // Adjust the surface to match the theme
-                Primary = "#BB86FC",     // Customize primary color if needed
-                Secondary = "#03DAC6",
-                AppbarBackground = "#1a1a27",  // Match the app bar background with your custom color
-                TextPrimary = "#FFFFFF", // Ensure text is white for contrast
-                DrawerBackground = "#1a1a27"  // Also adjust drawer background if you're using a drawer
-            }
-        };
+            Background = "#1a1a27",  // Your custom dark background
+            Surface = "#2a2a3a",     // Adjust the surface to match the theme
+            Primary = "#BB86FC",     // Customize primary color if needed
+            Secondary = "#03DAC6",
+            AppbarBackground = "#1a1a27",  // Match the app bar background with your custom color
+            TextPrimary = "#FFFFFF", // Ensure text is white for contrast
+            DrawerBackground = "#1a1a27"  // Also adjust drawer background if you're using a drawer
+        }
+    };
 }
