Network service is ready. Sennheiser like EW-DX2CH or CHG 70N | CHG 70N-C will be discovered and we can now sync from those devices. Next step : Sync TO Device and be able to ping and keep alive connection with the devices.

--- a/RF_Go/Components/Licensing/AccountInfo.razor
+++ b/RF_Go/Components/Licensing/AccountInfo.razor
@@ -95,7 +95,8 @@
             {
                 // SecureStorage.RemoveAll(); // A supprimer en prod, on supprime que si le user est delete de la DB
                 client.DefaultRequestHeaders.Add("X-API-KEY", AppConfig.ApiKey);
-                var response = await client.DeleteAsync($"http://localhost:3000/users/{userKey}");
+                string baseUrl = AppConfig.ApiBaseUrl;
+                var response = await client.DeleteAsync($"{baseUrl}/users/{userKey}");
                 if (response.IsSuccessStatusCode)
                 {
                     SecureStorage.RemoveAll();
