--- a/RF_Go/Components/OfflineTab.razor
+++ b/RF_Go/Components/OfflineTab.razor
@@ -3,92 +3,97 @@
 @using System
 @using RF_Go.Data
 @using RF_Go.Models
+@using RF_Go.Components.Modal
 @using RF_Go.ViewModels
 @using System.Diagnostics
 @inject IDialogService Dialog
 @inject MudBlazor.ISnackbar Snackbar
 @inject IJSRuntime JSRuntime
 @inject NavigationManager NavigationManager
-        @if (DevicesViewModel.Devices.Count == 0)
-        {
-            <MudContainer MaxWidth="MaxWidth.Medium" Style="display: flex; justify-content: center; align-items: center;">
-                <MudPaper Class="pa-6" Elevation="3" Style="text-align: center; max-width: 400px;">
-                    <MudAlert Severity="Severity.Info" Variant="Variant.Filled" Class="mb-4">
-                        No devices found. Start by adding a device.
-                    </MudAlert>
-                    <MudFab Color="Color.Success" StartIcon="@Icons.Material.Filled.Add" OnClick="@(() => OpenDialogAsync())">
-                        Add Device
-                    </MudFab>
-                </MudPaper>
-            </MudContainer>
-        }
-        else
-        {
-            <div class="d-flex pl-6 pr-6 w-100 align-center justify-space-between pt-2">
-                    <MudFab Color="Color.Primary" StartIcon="@Icons.Material.Filled.Add" OnClick="@(() => OpenDialogAsync())">Open</MudFab>
-                    <div>
-                        <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="mx-2" @onclick="RFCalcul">
-                            Calculate
-                        </MudButton>
-                        <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="mx-2" @onclick="RFCalcul">
-                            Sync
-                        </MudButton>
-                </div>
-            </div>
-    
-            <MudTable Hover="true" Dense="true" Bordered="false" Striped="false" HorizontalScrollbar="true" @bind-Items="DevicesViewModel.Devices" @ref="mudTable"
+
+@if (DevicesViewModel.Devices.Count == 0)
+{
+    <MudContainer MaxWidth="MaxWidth.Medium" Style="display: flex; justify-content: center; align-items: center;">
+        <MudPaper Class="pa-6" Elevation="3" Style="text-align: center; max-width: 400px;">
+            <MudAlert Severity="Severity.Info" Variant="Variant.Filled" Class="mb-4">
+                No devices found. Start by adding a device.
+            </MudAlert>
+            <MudFab Color="Color.Success" StartIcon="@Icons.Material.Filled.Add" OnClick="@(() => OpenDialogAsync())">
+                Add Device
+            </MudFab>
+        </MudPaper>
+    </MudContainer>
+}
+else
+{
+    <div class="d-flex pl-6 pr-6 w-100 align-center justify-space-between pt-2">
+        <MudFab Color="Color.Primary" StartIcon="@Icons.Material.Filled.Add" OnClick="@(() => OpenDialogAsync())">Open</MudFab>
+        <div>
+            <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="mx-2" @onclick="RFCalcul">
+                Calculate
+            </MudButton>
+            <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="mx-2" @onclick="OpenDialogOnlineDevice">
+                Sync
+            </MudButton>
+        </div>
+    </div>
+
+    <MudTable Hover="true" Dense="true" Bordered="false" Striped="false" HorizontalScrollbar="true" @bind-Items="DevicesViewModel.Devices" @ref="mudTable"
               RowClass="cursor-pointer" RowClassFunc="@SelectedRowClassFunc" Style="margin: auto; overflow: auto; max-height: calc(100vh - 150px);">
-                <HeaderContent>
-                    <MudTh Style="min-width: 200px;">Device</MudTh>
-                    <MudTh Style="min-width: 150px;">Set Frequencies</MudTh>
-                    <MudTh Class="d-flex align-center justify-space-between" Style="min-width: 150px;">
-                            <span>Group</span>
-                        <MudIconButton Icon="@Icons.Material.Filled.Delete" @onclick="DeleteAll" />
-                    </MudTh>
+        <HeaderContent>
+            <MudTh Style="min-width: 200px;">Device</MudTh>
+            <MudTh Style="min-width: 150px;">Set Frequencies</MudTh>
+            <MudTh Class="d-flex align-center justify-space-between" Style="min-width: 150px;">
+                <span>Group</span>
+                <MudIconButton Icon="@Icons.Material.Filled.Delete" @onclick="DeleteAll" />
+            </MudTh>
+        </HeaderContent>
 
-                </HeaderContent>
-
-                <RowTemplate>
-                        <MudTd>
-                            <MudTable @bind-Items="@context.Channels" Hover="true" Style="min-width:70px;">
-                                <RowTemplate Context="chan">
-                                    <MudTd Class="d-flex align-center mt-0">
-                                    <MudTextField Typo="Typo.caption" Label="@GetBrandAndModel(context)" @bind-Value="@chan.ChannelName" Class="mt-0" Margin="Margin.Dense" Variant="Variant.Outlined"
-                                                      @onblur="() => SaveDeviceAsync(context)" />
-                                    </MudTd>
-                                </RowTemplate>
-                            </MudTable>
+        <RowTemplate>
+            <MudTd>
+                <MudTable @bind-Items="@context.Channels" Hover="true" Style="min-width:70px;">
+                    <RowTemplate Context="chan">
+                        <MudTd Class="d-flex align-center mt-0">
+                            <MudTextField Typo="Typo.caption" Label="@GetBrandAndModel(context)" @bind-Value="@chan.ChannelName" Class="mt-0" Margin="Margin.Dense" Variant="Variant.Outlined"
+                                          @onblur="() => SaveDeviceAsync(context)" />
                         </MudTd>
-                        <MudTd>
-                            <MudTable @bind-Items="@context.Channels" Hover="true" Style="min-width:70px;">
-                                <RowTemplate Context="chan" >
-                                    <MudTd Class="d-flex align-center mt-0">
-                                        <MudNumericField @bind-Value="chan.Frequency" Min="@chan.Range[0]" Max="@chan.Range[1]" Step="@chan.Step" Style="@CalculateStyle(chan)" Class="mt-0" Label="@GetRange(chan)" Variant="Variant.Outlined" Margin="Margin.Dense" />
-                                        <MudCheckBox @bind-Value="chan.IsLocked" Dense="true" Color="Color.Secondary" CheckedIcon="@Icons.Material.Filled.Lock" UncheckedIcon="@Icons.Material.Filled.LockOpen" Class="pl-3"></MudCheckBox>
-                                    </MudTd>
-                                </RowTemplate>
-                            </MudTable>
-                        </MudTd>
-                        <MudTd>
-                            <div class="d-flex justify-content-between">
-                                <MudSelect T="int" Value="context.GroupID" ValueChanged="(newGroupId) => GroupsViewModel.UpdateDeviceGroupAsync(context, newGroupId)">
-                                    @foreach (var group in GroupsViewModel.Groups)
-                                    {
-                                        <MudSelectItem Value="@group.ID">@group.Name</MudSelectItem>
-                                    }
-                                </MudSelect>
-                                <MudIconButton Icon="@Icons.Material.Filled.Delete" @onclick="() => DeleteDevice(context)" aria-label="delete" />
-                        </div>
-                        <MudTextField Typo="Typo.caption" Style="margin:0;" @bind-Value="@context.IpAddress" Placeholder="IP Address" @onblur="() => SaveDeviceAsync(context)" Class="custom-textfield" />
-                    </MudTd>
                     </RowTemplate>
-                    <PagerContent>
-                        <MudTablePager />
-                    </PagerContent>
                 </MudTable>
-        }
+            </MudTd>
+            <MudTd>
+                <MudTable @bind-Items="@context.Channels" Hover="true" Style="min-width:70px;">
+                    <RowTemplate Context="chan">
+                        <MudTd Class="d-flex align-center mt-0">
+                            <MudNumericField @bind-Value="chan.Frequency" Min="@chan.Range[0]" Max="@chan.Range[1]" Step="@chan.Step" Style="@CalculateStyle(chan)" Class="mt-0" Label="@GetRange(chan)" Variant="Variant.Outlined" Margin="Margin.Dense" />
+                            <MudCheckBox @bind-Value="chan.IsLocked" Dense="true" Color="Color.Secondary" CheckedIcon="@Icons.Material.Filled.Lock" UncheckedIcon="@Icons.Material.Filled.LockOpen" Class="pl-3"></MudCheckBox>
+                        </MudTd>
+                    </RowTemplate>
+                </MudTable>
+            </MudTd>
+            <MudTd>
+                <div class="d-flex justify-content-between">
+                    <MudSelect T="int" Value="context.GroupID" ValueChanged="(newGroupId) => GroupsViewModel.UpdateDeviceGroupAsync(context, newGroupId)">
+                        @foreach (var group in GroupsViewModel.Groups)
+                        {
+                            <MudSelectItem Value="@group.ID">@group.Name</MudSelectItem>
+                        }
+                    </MudSelect>
+                    <MudIconButton Icon="@Icons.Material.Filled.LinkOff" @onclick="() => DesyncDevice(context)" aria-label="desync" />
+                    <MudIconButton Icon="@Icons.Material.Filled.Delete" @onclick="() => DeleteDevice(context)" aria-label="delete" />
+                </div>
+                <div class="d-flex justify-content-between">
+                    <MudTextField Typo="Typo.caption" Style="margin:0;" @bind-Value="@context.IpAddress" Placeholder="IP Address" @onblur="() => SaveDeviceAsync(context)" Class="custom-textfield" />
+                    <MudIcon Icon="@GetSyncIcon(context)" Color="@GetSyncColor(context)" Size="Size.Small" />
+                </div>
+            </MudTd>
+        </RowTemplate>
+        <PagerContent>
+            <MudTablePager />
+        </PagerContent>
+    </MudTable>
+}
 
-    @code 
+@code
 {
     [Parameter] public DevicesViewModel DevicesViewModel { get; set; }
     [Parameter] public GroupsViewModel GroupsViewModel { get; set; }
@@ -102,8 +107,7 @@
     private int selectedRowNumber = -1;
     private bool selectAll { get; set; }
     private List<string> clickedEvents = new();
-
-
+    private bool OfflineBoxVisibility = false;
 
     private string CalculateStyle(RFChannel chan)
     {
@@ -141,16 +145,49 @@
     }
     protected override async Task OnInitializedAsync()
     {
-        await DevicesViewModel.LoadDevicesAsync();
-        await GroupsViewModel.LoadGroupsAsync();
-        await base.OnInitializedAsync();
-    }        private bool isAddingDevice = false;
+        try
+        {
+            Debug.WriteLine("OnInitializedAsync called");
+            if (DevicesViewModel == null)
+            {
+                throw new InvalidOperationException("DevicesViewModel is not initialized.");
+            }
+            if (GroupsViewModel == null)
+            {
+                throw new InvalidOperationException("GroupsViewModel is not initialized.");
+            }
+            if (DeviceData == null)
+            {
+                throw new InvalidOperationException("DeviceData is not initialized.");
+            }
+            if (ExclusionChannelViewModel == null)
+            {
+                throw new InvalidOperationException("ExclusionChannelViewModel is not initialized.");
+            }
+
+            await DevicesViewModel.LoadDevicesAsync();
+            await GroupsViewModel.LoadGroupsAsync();
+            await base.OnInitializedAsync();
+        }
+        catch (Exception ex)
+        {
+            Debug.WriteLine($"Error in OnInitializedAsync: {ex.Message}");
+            throw;
+        }
+    }
+    private bool isAddingDevice = false;
     private int selectedQuantity = 1;
     private List<int> frequencyOptions = Enumerable.Range(1, 99).ToList();
     private async Task DeleteDevice(RFDevice device)
     {
         await DevicesViewModel.DeleteDeviceAsync(device.ID);
         Snackbar.Add("Device deleted", Severity.Success);
+    }
+    private async Task DesyncDevice(RFDevice device)
+    {
+        device.IsSynced = false;
+        await SaveDeviceAsync(device);
+        Snackbar.Add("Device desynchronized", Severity.Info);
     }
     private List<(float StartFrequency, float EndFrequency)> GetExcludedRanges()
     {
@@ -169,8 +206,7 @@
 
         foreach (var groupSet in overlappingGroups)
         {
-            HashSet
-    <int> UsedFrequencies = new HashSet<int>();
+            HashSet<int> UsedFrequencies = new HashSet<int>();
             HashSet<int> TwoTX3rdOrder = new HashSet<int>();
             HashSet<int> TwoTX5rdOrder = new HashSet<int>();
             HashSet<int> TwoTX7rdOrder = new HashSet<int>();
@@ -278,29 +314,50 @@
 
     private Task OpenDialogAsync()
     {
-        // Initialize dialog options
+        var options = new DialogOptions
+            {
+                MaxWidth = MaxWidth.Medium,
+                FullWidth = true
+            };
+        return Dialog.ShowAsync<DeviceSelection>(
+            "Add your devices",
+            new DialogParameters
+                    {
+                    { "DeviceData", DeviceData },
+                    { "DevicesViewModel", DevicesViewModel },
+                    { "GroupsViewModel", GroupsViewModel }
+                    },
+            options
+        );
+    }
+    private async Task OpenDialogOnlineDevice()
+    {
+        var parameters = new DialogParameters
+        {
+            { "DevicesViewModel", DevicesViewModel },
+            //{ "OnDeviceSaved", EventCallback.Factory.Create(this, RefreshParentState) }
+        };
+
         var options = new DialogOptions
             {
                 MaxWidth = MaxWidth.Medium,
                 FullWidth = true
             };
 
-        // Pass parameters and options in the correct order
-        return Dialog.ShowAsync<DeviceSelection>(
-            "Add your devices",
-            new DialogParameters
-                    {
-            { "DeviceData", DeviceData },
-            { "DevicesViewModel", DevicesViewModel },
-            { "GroupsViewModel", GroupsViewModel },
-            { "OnDeviceSaved", EventCallback.Factory.Create(this, RefreshParentState) },
-                    },
-            options
-        );
+        await Dialog.ShowAsync<OnlineDevicesModal>("Online Devices", parameters, options);
     }
-
     private void RefreshParentState()
     {
         StateHasChanged();
     }
+    private string GetSyncIcon(RFDevice device)
+    {
+        return device.IsSynced ? Icons.Material.Filled.CheckCircle : Icons.Material.Filled.Cancel;
+    }
+    private Color GetSyncColor(RFDevice device)
+    {
+        return device.IsSynced ? Color.Success : Color.Error;
+    }
 }
+
+
