--- a/RF_Go/Components/RemoteTab.razor
+++ b/RF_Go/Components/RemoteTab.razor
@@ -1,88 +1,77 @@
-﻿@using MudBlazor
-@using Newtonsoft.Json
-@using System.IO
-@using System
-@using RF_Go.Data
-@using RF_Go.Models
-@using RF_Go.ViewModels
-@using System.Diagnostics
-@using RF_Go.Services
-@inject DiscoveryService discoveryService
-@inject ShureDiscoveryService shureDiscoveryService
-@inject SennheiserDiscoveryService sennheiserDiscoveryService
+﻿@* @using MudBlazor *@
+@* @using Newtonsoft.Json *@
+@* @using System.IO *@
+@* @using System *@
+@* @using RF_Go.Data *@
+@* @using RF_Go.Models *@
+@* @using RF_Go.ViewModels *@
+@* @using System.Diagnostics *@
+@* @using RF_Go.Services; *@
+@* @using RF_Go.Services.NetworkProtocols *@
+@* @inject DiscoveryService discoveryService *@
+@* @inject ShureDiscoveryService shureDiscoveryService *@
+@* @inject SennheiserDiscoveryService sennheiserDiscoveryService *@
     
-<MudTable Items="@DiscoveredDevices"
-          Bordered="true"
-          Hover="true"
-          Striped="true"
-          Dense="true"
-          Style="margin: auto; overflow: auto; height: calc(100vh - 150px);">
-    <HeaderContent>
-        <MudTh>Brand</MudTh>
-        <MudTh>Type</MudTh>
-        <MudTh>Name</MudTh>
-        <MudTh>IP Addresses</MudTh>
-        <MudTh>Actions</MudTh>
-    </HeaderContent>
-    <RowTemplate>
-        <MudTd>@context.Type</MudTd>
-        <MudTd>@GetBrand(context.Type)</MudTd>
-        <MudTd>@context.Name</MudTd>
-        <MudTd>
-            @foreach (var ip in context.IPAddresses)
-            {
-                <MudChip T="string">@ip</MudChip>
-            }
-        </MudTd>
-        <MudTd>
-            <MudButton Variant="Variant.Filled" Color="Color.Primary" @onclick="() => SyncDevice(context)">
-                Sync
-            </MudButton>
-        </MudTd>
-    </RowTemplate>
-</MudTable>
+@* <MudTable Items="@DiscoveredDevices" *@
+@*           Bordered="true" *@
+@*           Hover="true" *@
+@*           Striped="true" *@
+@*           Dense="true" *@
+@*           Style="margin: auto; overflow: auto; height: calc(100vh - 150px);"> *@
+@*     <HeaderContent> *@
+@*         <MudTh>Brand</MudTh> *@
+@*         <MudTh>Type</MudTh> *@
+@*         <MudTh>Name</MudTh> *@
+@*         <MudTh>IP Addresses</MudTh> *@
+@*         <MudTh>Actions</MudTh> *@
+@*     </HeaderContent> *@
+@*     <RowTemplate> *@
+@*         <MudTd>@context.Brand</MudTd> *@
+@*         <MudTd>@context.Type</MudTd> *@
+@*         <MudTd>@context.Name</MudTd> *@
+@*         <MudTd> *@
+@*                 <MudChip T="string">@context.IPAddress</MudChip> *@
+@*         </MudTd> *@
+@*         <MudTd> *@
+@*             <MudButton Variant="Variant.Filled" Color="Color.Primary" @onclick="() => SyncDevice(context)"> *@
+@*                 Sync *@
+@*             </MudButton> *@
+@*         </MudTd> *@
+@*     </RowTemplate> *@
+@* </MudTable> *@
 
-@code {
-    [Parameter] public DevicesViewModel DevicesViewModel { get; set; }
-    [Parameter] public GroupsViewModel GroupsViewModel { get; set; }
-    [Parameter] public DeviceData DeviceData { get; set; }
-    private List<DeviceDiscoveredEventArgs> DiscoveredDevices = new();
+@* @code { *@
+@*     [Parameter] public DevicesViewModel DevicesViewModel { get; set; } *@
+@*     [Parameter] public GroupsViewModel GroupsViewModel { get; set; } *@
+@*     [Parameter] public DeviceData DeviceData { get; set; } *@
+@*     private List<DeviceDiscoveredEventArgs> DiscoveredDevices = new(); *@
 
-    protected override void OnInitialized()
-    {
-        discoveryService.DeviceDiscovered += OnDeviceDiscovered;
-        discoveryService.StartDiscovery();
-    }
+@*     protected override void OnInitialized() *@
+@*     { *@
+@*         discoveryService.DeviceDiscovered += OnDeviceDiscovered; *@
+@*         discoveryService.StartDiscovery(); *@
+@*         discoveryService.TriggerSennheiserDiscovery(); *@
+@*     } *@
+@*     private void OnDeviceDiscovered(object sender, DeviceDiscoveredEventArgs e) *@
+@*     { *@
+@*         if (!DiscoveredDevices.Any(d => d.Name == e.Name)) *@
+@*         { *@
+@*             InvokeAsync(() => *@
+@*             { *@
+@*                 DiscoveredDevices.Add(e); *@
+@*                 StateHasChanged(); *@
+@*             }); *@
+@*         } *@
+@*     } *@
+@*     private void SyncDevice(DeviceDiscoveredEventArgs device) *@
+@*     { *@
+@*         // A faire dans le futur *@
+@*     } *@
 
-    private void OnDeviceDiscovered(object sender, DeviceDiscoveredEventArgs e)
-    {
-        if (!DiscoveredDevices.Any(d => d.Name == e.Name))
-        {
-            InvokeAsync(() =>
-            {
-                DiscoveredDevices.Add(e);
-                StateHasChanged();
-            });
-        }
-    }
-
-    private string GetBrand(string type)
-    {
-        if (type.Contains("ssc"))
-            return "Sennheiser";
-        if (type.Contains("ewd"))
-            return "EW-D";
-        return "Unknown";
-    }
-
-    private void SyncDevice(DeviceDiscoveredEventArgs device)
-    {
-        // A faire dans le futur
-    }
-
-    public void Dispose()
-    {
-        discoveryService.StopDiscovery();
-        discoveryService.DeviceDiscovered -= OnDeviceDiscovered;
-    }
-}
+@*     public void Dispose() *@
+@*     { *@
+@*         discoveryService.StopDiscovery(); *@
+        
+@*         discoveryService.DeviceDiscovered -= OnDeviceDiscovered; *@
+@*     } *@
+@* } *@
