Config is tested with multiple devices. added verification of ip on UDP Protocol

--- a/RF_Go/App.xaml
+++ b/RF_Go/App.xaml
@@ -8,8 +8,8 @@
 
             <Color x:Key="PageBackgroundColor">#512bdf</Color>
             <Color x:Key="PrimaryTextColor">White</Color>
-
             <Style TargetType="Label">
+                <Setter Property="Background" Value="#1a1a27" />
                 <Setter Property="TextColor" Value="{DynamicResource PrimaryTextColor}" />
                 <Setter Property="FontFamily" Value="OpenSansRegular" />
             </Style>
